# OBAP

./: .gitignore  CMakeLists.txt  build.sh  collisions.sh  deprecateSmallest.sh  deprecator.cpp  main.cpp  readme.md
main/R/: Protect.h
main/opt/: ModuleManager.h
main/opt/passes/: FunctionCallBreathFirst.cpp  FunctionCallBreathFirst.h  RshArgumentEffectSimple.cpp  RshArgumentEffectSimple.h  RshArgumentTracking.cpp  RshArgumentTracking.h  RshCallSiteCallerCalleeInfo.cpp  RshCallSiteCallerCalleeInfo.h  RshCallSiteCounter.cpp  RshCallSiteCounter.h
main/opt/visitors/: CallBaseCounterVisitor.cpp  CallBaseCounterVisitor.h
main/rir/: Context.cpp  Context.h  EnumSet.h
main/runtime/: Context.cpp  Context.h  TypeFeedback.h
main/utils/: BitcodeComparator.back  BitcodeComparator.h  ContextAnalysisComparison.cpp  ContextAnalysisComparison.deprecated  ContextAnalysisComparison.h  Debug.cpp  Debug.h  FunctionSignature.h  MNode.h  OBAHolder.cpp  OBAHolder.h  RshBuiltinsMap.cpp  RshBuiltinsMap.h  SerializedDataProcessor.cpp  SerializedDataProcessor.h  SerializerAbstraction.cpp  SerializerAbstraction.h  SlotSelection.cpp  SlotSelection.h  TVGraph.cpp  TVGraph.h  UMap.h  deserializerData.h  hasse.h  iter.cpp  iter.h  serializerClasses.h  serializerData.h
